--- a/job_portal/portal/templates/index.html
+++ b/job_portal/portal/templates/index.html
@@ -123,7 +123,7 @@
                         <li class="sample-item">
                             <a href="{% url 'college_list' %}?q={{ c.college_name|urlencode }}">
                                 <span class="item-title">{{ c.college_name }}</span>
-                                <span class="item-meta">({{ c.college_city }})</span>
+                                <span class="item-meta">{{ c.college_city }}</span>
                             </a>
                         </li>
                     {% empty %}
@@ -139,7 +139,7 @@
                         <li class="sample-item">
                             <a href="{% url 'company_list' %}?q={{ c.company_name|urlencode }}">
                                 <span class="item-title">{{ c.company_name }}</span>
-                                <span class="item-meta">({{ c.company_city }})</span>
+                                <span class="item-meta">{{ c.company_city }}</span>
                             </a>
                         </li>
                     {% empty %}
