--- a/job_portal/portal/static/portal/style.css
+++ b/job_portal/portal/static/portal/style.css
@@ -592,6 +592,8 @@ section {
         flex-direction: column;
         gap: 10px;
         padding: 12px 0 8px 0;
+        position: sticky;
+
     }
 }
 
