--- a/job_portal/portal/static/portal/style.css
+++ b/job_portal/portal/static/portal/style.css
@@ -181,7 +181,8 @@ nav {
     background: var(--nav-bg);
     padding: 18px 0 12px 0;
     box-shadow: var(--shadow);
-    position: relative;
+    position: sticky;
+    top:10px;
     z-index: 10;
     border-bottom: 1px solid var(--nav-border);
     backdrop-filter: var(--frosted);
